trivial authentication, refactor getById()
